# clawreef

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  REEF_CLI_USAGE.md  TUNNEL_USAGE.md  install.sh  pyproject.toml  requirements.txt  test_reef_cli.py  verify_minimal.py
docs/: DESIGN.md
research/: RESEARCH_TASK.md  gateway-api.md  inter-agent-communication.md  node-pairing.md  recommendation.md  skill-analysis.md
scripts/: reef_cli.py
skills/claw-pool-agent/: README.md  SKILL.md
skills/claw-pool-agent/config/: pool.json
skills/claw-pool-agent/scripts/: discover.py  heartbeat.py  register.py  task_handler.py
skills/claw-pool-controller/: README.md  SKILL.md
skills/claw-pool-controller/config/: pool.json
skills/claw-pool-controller/docs/: API.md
skills/claw-pool-controller/scripts/: balancer.py  federation_manager.py  monitor.py  network_manager.py  production_utils.py  registry.py  scheduler.py  task_scheduler_v2.py
skills/claw-pool-controller/web-ui/: index.html
tests/: PHASE3_TEST_SUMMARY.md  cross_process_test.py  cross_process_test_detailed.py  cross_process_test_final.py
