[project]
name = "clawreef"
version = "0.3.0"
description = "Distributed AI Agent Pool for OpenClaw"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ClawReef Team" }]
keywords = ["ai", "agents", "distributed", "openclaw", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=11.0",
    "aiohttp>=3.8.0",
    "requests>=2.25.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
enhanced = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "pyyaml>=6.0",
]

[project.scripts]
reef = "scripts.reef_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "tests", "skills"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP"]
